--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-accelerate==0.29.3
-datasets==2.19.0
-h5py==3.11.0
-huggingface-hub==0.22.2
-scikit-learn==1.4.2
-tokenizers==0.19.1
-torch==2.3.0
-torchvision==0.18.0
-tqdm==4.66.2
-transformers==4.40.1
+accelerate==1.11.0
+datasets==4.0.0
+h5py==3.15.1
+huggingface-hub==0.36.0
+scikit-learn==1.6.1
+tokenizers==0.22.1
+torch==2.9.0
+torchvision==0.24.0
+tqdm==4.67.1
+transformers==4.57.1
+matplotlib==3.10.0
+tensorboard==2.19.0
